tests/ui/stmt_expr_attrs_no_feature.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:14:5
   |
LL |     #[crablangfmt::skip]
   |     ^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/crablang/crablang/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:95:18
   |
LL |     fn y(a: [u8; #[crablangc_dummy] 5]);
   |                  ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/crablang/crablang/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:102:19
   |
LL |     const Y: u8 = #[crablangc_dummy] 5;
   |                   ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/crablang/crablang/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:108:19
   |
LL |     const Y: [u8; #[crablangc_dummy] 5];
   |                   ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/crablang/crablang/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:114:18
   |
LL |     field2: [u8; #[crablangc_dummy] 5]
   |                  ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/crablang/crablang/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:119:10
   |
LL |     [u8; #[crablangc_dummy] 5]
   |          ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/crablang/crablang/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:125:14
   |
LL |         [u8; #[crablangc_dummy] 5]
   |              ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/crablang/crablang/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:130:22
   |
LL |         field2: [u8; #[crablangc_dummy] 5]
   |                      ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/crablang/crablang/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:138:14
   |
LL |         6 => #[crablangc_dummy] (),
   |              ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/crablang/crablang/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error: aborting due to 9 previous errors

For more information about this error, try `crablangc --explain E0658`.
